Table formatting. Made smaller icons and text, with less padding, for correct sizing on mobile devices.

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -72,12 +72,12 @@ div.table-title {
 
 .table-title h3 {
    color: teal;
-   font-size: 36px;
+   font-size: 24px;
    font-weight: 400;
-   font-style:normal;
+   font-style: normal;
    font-family: "Encode Sans", helvetica, arial, sans-serif;
    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-   text-transform:uppercase;
+   text-transform: uppercase;
 }
 
 
@@ -103,7 +103,7 @@ th {
   border-right: 1px solid #343a45;
   font-size:14px;
   font-weight: 200;
-  padding:14px;
+  padding:8px;
   text-align:left;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   vertical-align:middle;
@@ -151,7 +151,7 @@ tr:nth-child(odd):hover td {
  
 td {
   background:#FFFFFF;
-  padding:14px;
+  padding:4px;
   text-align:left;
   vertical-align:middle;
   font-weight:500;
